중복로그인 방지 : 기존 로그인 유저 강제 로그아웃 기능 추가

--- a/middle_team_project/WebContent/WEB-INF/web.xml
+++ b/middle_team_project/WebContent/WEB-INF/web.xml
@@ -13,5 +13,7 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
-
+ <listener>
+        <listener-class>middleteamproject.SessionListener</listener-class>
+    </listener>
 </web-app>  
